--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,13 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render 'layouts/navigation' %>
+    <div class="container">
+      
+      <%= yield %>
+
+      <%= render 'layouts/footer' %>
+    </div>
   </body>
+
 </html>
