--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -12,7 +12,7 @@ $navbar-default-bg: #205a87;
   height: 300px;
 }
 
-.jumbotron h1, h2 {
+.jumbotron h1, .jumbotron h2 {
   color: white;
   text-align: center;
   margin-bottom: 30px;
