--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,15 @@
 <!-- Site footer -->
 <footer class="footer">
-  <p>&copy; 2017 My Recipes Company, Inc.</p>
+  <small>
+    <strong><a href="#">My Wesite</a></strong>
+    by <em><a href="#">Thai Nguyen</a></em>
+  </small>
+
+  <nav>
+    <ul>
+      <li><%= link_to "About", '#' %></li>
+    </ul>
+  </nav>
+
+
 </footer>
