implemented and add test for recipe create

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -70,3 +70,19 @@ footer ul li {
   float: left;
   margin-right: 20px;
 }
+
+.description {
+  margin-top: 0;
+}
+
+.well a {
+  color: #205a87;
+}
+
+.chef-info {
+  margin-top: 10px;
+}
+
+.right {
+  margin-left: 433px;
+}
