--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,16 +1,14 @@
-<h1 align="center">Recipes#index</h1>
-<hr>
-
-<%  @recipes.each do |recipe| %>
+<%= render 'shared/page_title', title: "showing all recipes" %>
+<% @recipes.each do |recipe| %>
   <div class="row">
     <div class="col-md-2">
-      <section class="center">
-        Chef Img
+      <section class="chef-info center">
+        <%= gravatar_for(recipe.chef, size: 120) %>
       </section>
     </div>
 
     <div class="col-md-8 well">
-      <h4><%= recipe.name %></h4>
+      <h4><%= link_to recipe.name, recipe_path(recipe) %></h4>
       <p><%= truncate(recipe.description, length: 150) %></p>
       <p>
         <span class="quiet">
