--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
 
   <body>
     <%= render 'layouts/navigation' %>
+    <%= render 'layouts/message' %>
+
     <div class="container">
 
       <%= yield %>
