--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -5,6 +5,7 @@
   <hr>
   <%= simple_format(@recipe.description) %>
   <hr>
+
   <div class="pull-right">
     <p class="center">
       <em>Created by: </em>
@@ -20,6 +21,15 @@
         <%= time_ago_in_words(@recipe.created_at) %> ago
       </div>
     </p>
-
   </div>
+
+  <div class="recipe-action">
+    <%= link_to 'Edit this recipe', edit_recipe_path(@recipe), class: "btn btn-warning btn-xs" %>
+    <%= link_to 'Delete this recipe', recipe_path(@recipe),
+      method: :delete,
+      data: {confirm: "Are you sure you want to delete this recipe?"},
+      class: "btn btn-danger btn-xs"
+    %>
+  </div>
+
 </div>
