--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -13,7 +13,7 @@
       <p>
         <span class="quiet">
           <small>
-            Createed <%= time_ago_in_words(recipe.created_at) %> ago
+            Created <%= time_ago_in_words(recipe.created_at) %> ago
           </small>
         </span>
       </p>
