--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,17 +1,17 @@
-<% if @recipe.errors.any? %>
+<% if obj.errors.any? %>
   <div class="row">
     <div class="col-md-offset-2 col-md-8">
       <div class="panel panel-danger">
 
         <div class="panel-heading">
           <h2 class="panel-title">
-            <%= pluralize(@recipe.errors.count, "error") %>
-            prohibited this <%= @recipe.class %> from being saved:
+            <%= pluralize(obj.errors.count, "error") %>
+            prohibited this <%= obj.class %> from being saved:
           </h2>
 
           <div class="panel-body">
             <ul>
-              <% @recipe.errors.full_messages.each do |msg| %>
+              <% obj.errors.full_messages.each do |msg| %>
               <li>
                 <%= msg %>
               </li>
