--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,38 +1,2 @@
 <%= render 'shared/page_title', title: "Edit a existing recipe" %>
-<%= render 'shared/errors', recipe: @recipe %>
-
-
-<div class="row">
-  <div class="col-md-12">
-    <%= form_for(@recipe, :html => { class: 'form-horizontal', role: "form" }) do |f| %>
-      <div class="form-group">
-        <div class="control-label col-md-2">
-          <%= f.label :name %>:
-        </div>
-
-        <div class="col-md-8">
-          <%= f.text_field :name, class: "form-control", placeholder: "Name of recipe", autofocus: true %><br />
-        </div>
-      </div>
-
-      <div class="form-group">
-        <div class="control-label col-md-2">
-          <%= f.label :description %>
-        </div>
-
-        <div class="col-md-8">
-          <%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Enter steps to create recipe" %>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-          <%= f.submit 'Update', class: "btn btn-primary btn-lg btn-xlarge" %>
-          <%= link_to "Cancel", recipes_path, class: "btn btn-danger btn-lg right" %>
-        </div>
-
-      </div>
-    <% end %>
-
-  </div>
-</div>
+<%= render 'form' %>
