--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron center">
   <h1>Welcome to My Recipes </h1>
   <h2>The best recipe sharing app!</h2>
-  <p><%= link_to 'View all Recipes', recipes_path , class: "btn btn-danger btn-lg btn-xlarge"%></p>
+  <p><%= link_to 'Sign Up', signup_path , class: "btn btn-danger btn-lg btn-xlarge"%></p>
 </div>
 
 
