--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/page_title', title: @recipe.name %>
+<%= render 'shared/page_title', title: @recipe.name.capitalize %>
 
 <div class="well col-md-8 col-md-offset-2">
   <h4 class="center description"><strong>Step: </strong></h4>
