add listing and paginate

--- a/app/views/chefs/show.html.erb
+++ b/app/views/chefs/show.html.erb
@@ -8,4 +8,14 @@
 
 </div>
 
-<%= render 'recipes/recipe', obj: @chef.recipes %>
+
+
+<div class="center">
+  <%= will_paginate @chef_recipes %>
+</div>
+
+<%= render 'recipes/recipe', obj: @chef_recipes%>
+
+<div class="center">
+  <%= will_paginate @chef_recipes %>
+</div>
