--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,2 +1,11 @@
 <%= render 'shared/page_title', title: "showing all recipes" %>
-<%= render 'recipe', obj: @recipes %>
+
+<div class="center">
+  <%= will_paginate %>
+</div>
+
+  <%= render 'recipe', obj: @recipes %>
+
+<div class="center">
+  <%= will_paginate %>
+</div>
