--- a/app/views/chefs/index.html.erb
+++ b/app/views/chefs/index.html.erb
@@ -1,15 +1,23 @@
 <%= render 'shared/page_title', title: "Chefs listing" %>
 
 <div class="center">
-  <% @chefs.each do |chef| %>
-    <ul class="listing">
-      <div class="row">
-        <div class="well col-md-4 col-md-offset-4">
-          <li><%= link_to gravatar_for(chef), chef %></li>
-          <li class="chef-title"><%= link_to chef.name.capitalize, chef %></li>
-          <%= show_count_recipes(chef) %>
+  <%= will_paginate %>
+</div>
+
+  <div class="center">
+    <% @chefs.each do |chef| %>
+      <ul class="listing">
+        <div class="row">
+          <div class="well col-md-4 col-md-offset-4">
+            <li><%= link_to gravatar_for(chef), chef %></li>
+            <li class="chef-title"><%= link_to chef.name.capitalize, chef %></li>
+            <%= show_count_recipes(chef) %>
+          </div>
         </div>
-      </div>
-    </ul>
-  <% end %>
+      </ul>
+    <% end %>
+  </div>
+
+<div class="center">
+  <%= will_paginate %>
 </div>
