--- a/app/views/chefs/index.html.erb
+++ b/app/views/chefs/index.html.erb
@@ -9,9 +9,16 @@
       <ul class="listing">
         <div class="row">
           <div class="well col-md-4 col-md-offset-4">
+
             <li><%= link_to gravatar_for(chef), chef %></li>
             <li class="chef-title"><%= link_to chef.name.capitalize, chef %></li>
             <%= show_count_recipes(chef) %>
+            <li>
+              <%= link_to 'Delete', chef, method: :delete,
+                data: {confirm: "Are you sure you want to delete the chef and all associated recipes?"}
+              %>
+           </li>
+
           </div>
         </div>
       </ul>
