--- a/app/views/layouts/_message.html.erb
+++ b/app/views/layouts/_message.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
-  <div class="col-md-10 col-md-offset1">
+  <div class="col-md-offset-1 col-md-10">
     <% flash.each do |name, msg| %>
-      <div class="alert alert-<%= name %>">
+      <div class="alert alert-<%= name %> center">
         <a href="#" class="close" data-dismiss="alert">&#215;</a>
         <%= msg %>
       </div>
