--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-2">
       <section class="chef-info center">
-        <%= gravatar_for(recipe.chef, size: 120) %>
+        <%= link_to gravatar_for(recipe.chef, size: 120), recipe.chef %>
       </section>
     </div>
 
@@ -16,6 +16,19 @@
           </small>
         </span>
       </p>
+
+      <% if logged_in? && current_chef == recipe.chef %>
+        <div class="recipe-action">
+          <%= link_to 'Edit this recipe', edit_recipe_path(recipe), class: "btn btn-warning btn-xs" %>
+
+          <%= link_to 'Delete this recipe', recipe_path(recipe),
+          method: :delete,
+          data: {confirm: "Are you sure you want to delete this recipe?"},
+          class: "btn btn-danger btn-xs"
+            %>
+        </div>
+      <% end %>
+
     </div>
   </div>
 <% end %>
