--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -24,13 +24,15 @@
   </div>
 
   <div class="recipe-action">
-    <%= link_to 'Edit this recipe', edit_recipe_path(@recipe), class: "btn btn-warning btn-xs" %>
+    <% if logged_in? && current_chef == @recipe.chef %>
+      <%= link_to 'Edit this recipe', edit_recipe_path(@recipe), class: "btn btn-warning btn-xs" %>
 
-    <%= link_to 'Delete this recipe', recipe_path(@recipe),
-      method: :delete,
-      data: {confirm: "Are you sure you want to delete this recipe?"},
-      class: "btn btn-danger btn-xs"
-    %>
+      <%= link_to 'Delete this recipe', recipe_path(@recipe),
+        method: :delete,
+        data: {confirm: "Are you sure you want to delete this recipe?"},
+        class: "btn btn-danger btn-xs"
+      %>
+    <% end %>
 
     <%= link_to 'Return to recipes listing', recipes_path, class: "btn btn-xs btn-primary" %>
   </div>
