add admin feature

--- a/app/views/chefs/_form.html.erb
+++ b/app/views/chefs/_form.html.erb
@@ -58,5 +58,13 @@
     </div>
 
     <% end %>
+    <div class="center">
+      <%= link_to 'Delete', @chef,
+      class: "btn btn-danger btn-md",
+        method: :delete,
+        data: {confirm: "Are you sure you want to delete your account and all associated recipes?"}
+        %>
+    </div>
+
   </div>
 </div>
