--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -76,9 +76,9 @@ footer ul li {
   margin-top: 0;
 }
 
-.well a {
-  color: #205a87;
-}
+// .well a {
+//   color: #205a87;
+// }
 
 .chef-info {
   margin-top: 10px;
@@ -105,3 +105,7 @@ footer ul li {
   font-weight: bold;
   font-size: 1.3em;
 }
+
+// .chef-delete {
+//   color: white;
+// }
