--- a/app/views/chefs/index.html.erb
+++ b/app/views/chefs/index.html.erb
@@ -13,11 +13,16 @@
             <li><%= link_to gravatar_for(chef), chef %></li>
             <li class="chef-title"><%= link_to chef.name.capitalize, chef %></li>
             <%= show_count_recipes(chef) %>
-            <li>
-              <%= link_to 'Delete', chef, method: :delete,
-                data: {confirm: "Are you sure you want to delete the chef and all associated recipes?"}
-              %>
-           </li>
+
+            <% if logged_in? && current_chef.admin? && !chef.admin %>
+              <li>
+                <%= link_to 'Delete', chef,
+                  class: "btn btn-danger btn-xs",
+                  method: :delete,
+                  data: {confirm: "Are you sure you want to delete the chef and all associated recipes?"}
+                %>
+             </li>
+            <% end %>
 
           </div>
         </div>
