--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -43,6 +43,7 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
               <%= current_chef.name.capitalize %>'s Profile
+              <%= 'Admin' if current_chef.admin? %>
             <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><%= link_to 'View your profile', current_chef %></li>
