--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -24,7 +24,7 @@
   </div>
 
   <div class="recipe-action">
-    <% if logged_in? && current_chef == @recipe.chef %>
+    <% if logged_in? && (current_chef == @recipe.chef || current_chef.admin?) %>
       <%= link_to 'Edit this recipe', edit_recipe_path(@recipe), class: "btn btn-warning btn-xs" %>
 
       <%= link_to 'Delete this recipe', recipe_path(@recipe),
