--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -106,6 +106,6 @@ footer ul li {
   font-size: 1.3em;
 }
 
-// .chef-delete {
-//   color: white;
-// }
+.input_checkbox input {
+  width: auto !important;
+}
