--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -24,6 +24,19 @@
       </div>
 
       <div class="form-group">
+        <div class="row">
+          <div class="col-md-offset-2 col-md-8">
+            <%= f.collection_check_boxes :ingredient_ids, Ingredient.all, :id, :name do |cb| %>
+              <%
+                cb.label(class: "checkbox-inline input_checkbox") \
+                { cb.check_box(class: "checkbox") + cb.text }
+               %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
           <%= f.submit 'Create', class: "btn btn-primary btn-lg btn-xlarge" %>
           <%= link_to "Cancel", recipes_path, class: "btn btn-danger btn-lg right" %>
