--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -18,6 +18,7 @@
           <small>
             Created <%= time_ago_in_words(recipe.created_at) %> ago
             by <%= recipe.chef.name.capitalize %>
+            | <%= pluralize(recipe.comments.count, 'Comment') %>
           </small>
         </span>
       </p>
